fixing extra padding in main

--- a/apps/fe-commerce/src/app/modules/main/home/home.component.scss
+++ b/apps/fe-commerce/src/app/modules/main/home/home.component.scss
@@ -12,7 +12,7 @@
     padding-top: 24px;
     padding-left: 16px;
     padding-right: 16px;
-    padding-bottom: 36px;
+    padding-bottom: 16px;
     .headline {
         font-weight: 600;
         color: rgba(0, 0, 0, 0.87);
