--- a/apps/fe-commerce/src/assets/styles/_global.scss
+++ b/apps/fe-commerce/src/assets/styles/_global.scss
@@ -10,7 +10,6 @@ main {
   box-sizing: border-box;
 
   .scrollable-container {
-    flex: 1;
     overflow: auto;
   }
 }
